2008-12-12  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* data/element.txt, data/atomtyp.txt: Minor changes. Allow boron
	to have 4 bonds and adjust implicit valence for several elements.

	* src/typer.cpp: Fix for PR#2017902 -- bug introduced by r2578 in
	detecting guanidinium C atoms.

2008-12-01  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/pdbformat.cpp: Add support for reading CRYST1
	records, contributed by Francois-Xavier Coudert. PR#2343128.

2008-11-22  Chris Morley
	
	* src/ops/loader.cpp: do not remove comments after 4th line of
	an entry in plugindefines.tx. SMARTS uses '#'!
	
	* src/ops/optransform.cpp: revamp parsing.
	
	* src/phmodel.cpp(OBChemTsfm::Init): correct bug in which some
	kinds of transform were not taken into account when checking
	whether there was anything to do.

2008-11-23  Noel O'Boyle  <baoilleach@gmail.com>

	* OBCSharp: (1) Changed name of dll to openbabelcsharp.dll to avoid
	clashes	with other scripting languages in future, (2) Added Matt's
	Assembly Info, (3) Added Matt's signed key, (4) Updated install
	instructions for IronPython usage

2008-11-22  Geoff Hutchison  <babel@geoffhutchison.net>

	* src/formats/Makefile.am: Update to fix PR#2022153 -- don't build
	InChI format if --disable-inchi is picked.

	* configure.in, *: Update for 2.2.1 version numbering and current
	autotools bug fixes.

2008-11-21  Geoff Hutchison  <babel@geoffhutchison.net>

	* src/data.cpp (GetAtomicNum): Fix bug with patch supplied by
	Wayne Volkmuth (PR#2289021). Crashes with 3-character element.

	* include/openbabel/atom.h: Patch from Wayne Volkmuth to ensure
	atomic numbers are unsigned (i.e., values above 127 are
	OK). PR#2289628.

	* src/formats/pdbformat.cpp: Patch from Francois-Xavier Coudert to
	write CRYST1 records when unit cell data is present. PR#2023510.

	* src/generic.cpp (OBUnitCell::GetLatticeType): Fix bug reported
	(and patched) by Jonathan Coome.

2008-11-05  Tim Vandermeersch <tim.vandermeersch@gmail.com>
