@@ -68,9 +68,6 @@ BUILT_SOURCES += ruby/openbabel_ruby.cpp
 ruby/openbabel_ruby.cpp: openbabel-ruby.i $(script_headers)
 	$(SWIG) -small -O -ruby -naturalvar -autorename -c++ -o $@ \
 	-templatereduce -I$(top_srcdir)/include -I$(top_builddir)/include $<;
-	(cd ruby; ruby extconf.rb \
-  --with-openbabel-include=$(includedir)/openbabel-2.0 \
-  --with-openbabel-lib=$(libdir) )
 	sed -e 's/rb_define_module(\"Openbabel\")/rb_define_module(\"OpenBabel\")/' -e 's/void Init_OpenBabel/void Init_openbabel/' <ruby/openbabel_ruby.cpp >ruby/openbabel_ruby.new 
 	mv ruby/openbabel_ruby.new ruby/openbabel_ruby.cpp
 endif # BUILD_RUBY
